---
title: "Timescape Viewer"
---
erDiagram
    Timescape["Timescape Viewer"] {
        string title
    }

    Origin {
        String name
    }

    ScopeLegend {
    }

    ScopePlotter {
    }

    Window {
        Timestamp begin
        Timestamp end
        LiveMode live
    }

    Timescape ||--o{ Origin: origins
    Timescape ||--o{ ScopeLegend: n
    Timescape ||--o{ ScopePlotter: "n*m"
    Timescape ||--o{ Window: m

    Signal {
        String name
        String description
        String unit
    }

    ScopePlotter }o..o{ Signal: "shows"
    Origin ||..|{ Signal: "owns"

    Run {
        String title
    }

    Origin ||..|{ Run: "consists of"
    Window }o..|| Run: "shows"

    Track {
        dummy value
    }

    Run ||--|{ Track: "has"
    Track ||..|{ Signal: "has"

    Block {
        Date begin
        Date end
        double[] timestamps
        double[][] values
    }

    Track ||--o{ Block: "has"
